--- a/src/pages/it/index.astro
+++ b/src/pages/it/index.astro
@@ -50,7 +50,7 @@ const projects = (await getCollection("work_it"))
 
 			<Skills />
 			
-			<div style="font-size:1.5em;text-align: center;">
+			<div style="font-size: 1.5em; text-align: center;">
 				<strong>{t("site.aboutredi")}</strong>
 				<br>
 				<Trans i18nKey="site.aboutredi2">
@@ -110,7 +110,7 @@ const projects = (await getCollection("work_it"))
 	.hero img {
 		aspect-ratio: 5 / 4;
 		object-fit: cover;
-		object-position: top;
+		object-position: center;
 		border-radius: 1.5rem;
 		box-shadow: var(--shadow-md);
 	}
