--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,8 +18,8 @@ changeLanguage("en");
 				tagline={t("about.titled")}
 			>
 				<img
-					width="1553"
-					height="873"
+					width="512"
+					height="512"
 					src="/assets/at-work.webp"
 					alt="Davide Di Marsilio"
 				/>
@@ -132,6 +132,10 @@ changeLanguage("en");
 	}
 
 	img {
+		max-width: 60%;
+    	height: auto;
+    	margin-left: auto;
+    	margin-right: auto;
 		margin-top: 1.5rem;
 		border-radius: 1.5rem;
 		box-shadow: var(--shadow-md);
