Added page titles

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,5 +1,6 @@
 ---
 import { GoogleFontsOptimizer } from 'astro-google-fonts-optimizer';
+import { t } from "i18next";
 import '../styles/global.css';
 
 interface Props {
@@ -14,10 +15,10 @@ const {
 ---
 
 <meta charset="UTF-8" />
-<meta name="description" property="og:description" content={description} />
+<meta name="description" property="og:description" content={t( "site.sited")} />
 <meta name="viewport" content="width=device-width" />
 <meta name="generator" content={Astro.generator} />
-<title>{title}</title>
+<title>{t( "site.site")}</title>
 
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
