--- a/src/pages/it/about.astro
+++ b/src/pages/it/about.astro
@@ -10,7 +10,7 @@ import Icon from "../../components/Icon.astro";
 changeLanguage("it");
 ---
 
-<BaseLayout title="About | Davide Di Marsilio" description="About Davide Di Marsilio">
+<BaseLayout title={t("site.abouts")} description={t("site.aboutd")}>
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
