--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -299,7 +299,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 
 		.link.active {
 			color: var(--accent-text-over);
-			background-color: var(--accent-regular);
+			background-color: var(--accent-regular) !important;
 		}
 
 		.menu-footer {
