--- a/src/pages/it/about.astro
+++ b/src/pages/it/about.astro
@@ -30,7 +30,7 @@ changeLanguage("it");
 				<div class="content">
 					<p>
 						<Trans i18nKey="about.text1">
-						I am an <strong>helpdesk operator</strong> with almost 3 years of experience in various IT fields. I possess knowledge in handling <strong>Azure, Active Directory, Operating Systems, and troubleshooting</strong> a wide range of software-related problems. Additionally, I have worked as a <strong>Control Room operator</strong>, leveraging my skills in monitoring softwares like Nagios.
+						I am an <strong>System Administrator</strong> with almost 3 years of experience in various IT fields. I possess knowledge in handling <strong>Azure, Active Directory, Operating Systems, and troubleshooting</strong> a wide range of software-related problems. Additionally, I have worked as a <strong>Control Room operator</strong>, leveraging my skills in monitoring softwares like Nagios.
 						</Trans>
 					</p>
 					<p>
@@ -49,29 +49,52 @@ changeLanguage("it");
 			<section>
 				<h2 class="section-title">{t("about.exp")}</h2>
 				<div class="content">
-					<h2>HelpDesk and Service Desk Technician - <a href="https://www.europassistance.it/" target="_blank">Europassistance</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
-					<h2 style="color:var(--gray-300);">Early 2023 | Full-time</h2>
-					<p><Icon icon="windows" size="1.33em" /> Windows Systems troubleshooting</p>
-					<p><Icon icon="user-folder" size="1.33em" /> Managing Active Directory</p>
-					<p><Icon icon="square-four" size="1.33em" /> O365 Global Administrator</p>
-					<p><Icon icon="identification-badge" size="1.33em" /> Identity Governance management (with company custom sotfware)</p>
-					<p><Icon icon="desktop-tower" size="1.33em" /> Remote and On-site IT support</p>
-					<p><Icon icon="hard-drives" size="1.33em" /> ESXi servers management</p>
+					<h2>System Administrator & End-user service - <a href="https://www.brembo.com/" target="_blank">Brembo</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
+					<h2 style="color:var(--gray-300);">Inizio 2024 | Full-time</h2>
+					<p><Icon icon="list-check" size="1.33em" /> Gestione ticket tramite la piattaforma Service Now</p>
+					<p><Icon icon="user-folder" size="1.33em" /> Active Directory e Domain Administrator: creazione utenze amministrative e onboarding, gruppi, OU, gestione permessi cartelle di rete, gestione Device Lock, Group Policies e DHCP Server</p>
+					<p><Icon icon="square-four" size="1.33em" /> Gestione completa di tutti i servizi MS: Azure, Intune, Teams Administrator, Exchange Online Administrator, Microsoft 365 Security, Microsoft Admin Portal</p>
+					<p><Icon icon="code" size="1.33em" /> Automatizzazione e scripting con Powershell e Python</p>
+					<p><Icon icon="phone-call" size="1.33em" /> Creazione e gestione di ticket critici verso supporto Microsoft in lingua inglese</p>
+					<p><Icon icon="network" size="1.33em" /> Conoscenza base di Reti e Networking</p>
+					<p><Icon icon="hard-drives" size="1.33em" /> Conoscenza base di SCCM</p>
+					<p><Icon icon="cloud" size="1.33em" /> Utilizzo di Citrix per gestione sessioni e virtualizzazione app</p>
+					<p><Icon icon="headset" size="1.33em" /> Gestione lato admin per varie applicazioni aziendali e applicazioni di assistenza remota (Bomgar)</p>
 					<br>
-					<h2>Control Room operator - <a href="https://www.luxottica.com/" target="_blank">Luxottica</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
-					<h2 style="color:var(--gray-300);">Early 2021 | Full-time</h2>
-					<p><Icon icon="pulse" size="1.33em" /> Monitoring software usage (Nagios & Solarwinds)</p>
-					<p><Icon icon="linux-logo" size="1.33em" /> Linux servers management</p>
-					<p><Icon icon="windows" size="1.33em" /> Windows servers managment</p>
-					<p><Icon icon="globe-simple" size="1.33em" /> Monitoring company IT infrastructure (switches, routers, servers and so on)</p>
-					<p><Icon icon="square-four" size="1.33em" /> Optimize Azure costs and usage</p>
+					<h2>HelpDesk - <a href="https://www.europassistance.it/" target="_blank">Europassistance</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
+					<h2 style="color:var(--gray-300);">Inizio 2023 | Full-time</h2>
+					<p><Icon icon="list-check" size="1.33em" /> Gestione ticket tramite la piattaforma Mantis</p>
+					<p><Icon icon="user-folder" size="1.33em" /> Active Directory, Windows Server 2016 - 2019</p>
+					<p><Icon icon="windows" size="1.33em" /> Creazione, gestione e configurazione di Distribution List e Shared Mailbox tramite Exchange Online e OnPremise</p>
+					<p><Icon icon="teams" size="1.33em" /> Conoscenza delle piattaforme Sharepoint, MS Teams</p>
+					<p><Icon icon="square-four" size="1.33em" /> Conoscenza di Azure e MS Intune</p>
+					<p><Icon icon="identification-badge" size="1.33em" /> Gestione parziale dell'Identity Governance aziendale</p>
+					<p><Icon icon="desktop-tower" size="1.33em" /> Assistenza in sede centrale per preparazione, installazione e organizzazione sale riunioni per videoconferenze</p>
+					<p><Icon icon="phone-call" size="1.33em" /> Gestione telefonate di assistenza tecnica e e-mail in entrata e uscita</p>
+					<br>
+					<h2>HelpDesk - <a href="https://www.centrostyle.com/" target="_blank">Centrostyle</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
+					<h2 style="color:var(--gray-300);">Inizio 2023</h2>
+					<p><Icon icon="list-check" size="1.33em" /> Gestione di ticket tramite la piattaforma Jira</p>
+					<p><Icon icon="desktop-tower" size="1.33em" /> Assistenza su installazione hardware in sede</p>
+					<p><Icon icon="printer" size="1.33em" /> Assistenza su installazione stampanti e software aziendali per gli utenti finali</p>
+					<p><Icon icon="computer-tower" size="1.33em" /> Montaggio di postazioni per gli utenti finali</p>
+					<p><Icon icon="square-four" size="1.33em" /> Preparazione dell'hardware aziendale: installazione OS, aggiornamento BIOS e altro</p>
+					<br>
+					<h2>Control Room Operator - <a href="https://www.luxottica.com/" target="_blank">Luxottica</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
+					<h2 style="color:var(--gray-300);">Inizio 2021 | Full-time</h2>
+					<p><Icon icon="pulse" size="1.33em" /> Gestione tramite la piattaforma di monitoraggio Nagios e Solarwind</p>
+					<p><Icon icon="code" size="1.33em" /> Creazione di script per Nagios e script di automazione con Python e Bash</p>
+					<p><Icon icon="linux-logo" size="1.33em" /> Installazione di agent su macchine Windows e Linux</p>
+					<p><Icon icon="hard-drives" size="1.33em" /> Monitoraggio di apparati di rete come Switch, Router, Firewall e Virtual Machine</p>
+					<p><Icon icon="phone-call" size="1.33em" /> Gestione di chiamate a livello internazionale in lingua inglese per problemi critici</p>
+					<p><Icon icon="square-four" size="1.33em" /> Utilizzo esteso della suite Office: Excel, Word, Outlook</p>
 					<br>
 					<h2>Recording Studio Technician - <a href="https://ilclandestinogiornale.italiasera.it/" target="_blank">DComunication</a></h2>
-					<h2 style="color:var(--gray-300);">Late 2019 | Fixed-term full-time</h2>
-					<p><Icon icon="video" size="1.33em" /> Video & Photo Editing</p>
-					<p><Icon icon="film-reel" size="1.33em" /> Directing for local television shows and broadcasts</p>
+					<h2 style="color:var(--gray-300);">Fine 2019 | Tempo determinato</h2>
+					<p><Icon icon="video" size="1.33em" /> Montaggio di video e foto</p>
+					<p><Icon icon="film-reel" size="1.33em" /> Regia per spettacoli e trasmissioni televisive locali</p>
 					<p><Icon icon="video-camera" size="1.33em" /> Cameraman</p>
-					<p><Icon icon="code" size="1.33em" /> Internal website development (wordpress) ad grapich design</p>
+					<p><Icon icon="code" size="1.33em" /> Sviluppo del sito web interno (WordPress) e design grafico</p>
 				</div>
 			</section>
 			<section>
@@ -79,36 +102,37 @@ changeLanguage("it");
 					<div>
 					<h2>Azure Fundamentals - AZ-900</h2>
 					<p><strong><a href="https://learn.microsoft.com/en-us/certifications/" target="_blank" style="text-decoration: none;">Microsoft</a></strong></p>
-					<p><strong>Summer 2022 - <Icon icon="certificate" size="1.33em" /><a href="https://www.credly.com/badges/1e4a40d9-096f-4382-b468-5fb8188e41b3/linked_in_profile" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong>Summer 2022 - <Icon icon="certificate" size="1.33em" /><a href="https://www.credly.com/badges/1e4a40d9-096f-4382-b468-5fb8188e41b3/linked_in_profile" target="_blank" style="text-decoration: none;"> Certificazione</a></strong></p>
 					<br>
-					<h2>EIPASS IT Security</h2>
-					<p><strong><a href="https://en.eipass.com/" target="_blank" style="text-decoration: none;">EIPASS</a></strong></p>
-					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS IT Security - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
-					<br>
-					<h2>EIPASS 7 Moduli User</h2>
-					<p><strong><a href="https://en.eipass.com/" target="_blank" style="text-decoration: none;">EIPASS</a></strong></p>
-					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS 7 Moduli User - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
+					<h2>Active Directory & Windows Server 2019</h2>
+					<p><strong><a href="https://www.udemy.com/" target="_blank" style="text-decoration: none;">Udemy</a></strong></p>
+					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-b5498972-c63b-4226-aadb-3ebd5c990977/" target="_blank" style="text-decoration: none;"> Certificazione</a></strong></p>
 					<br>
 					<h2>CSS, JavaScript And Python Complete Course</h2>
 					<p><strong><a href="https://www.udemy.com/" target="_blank" style="text-decoration: none;">Udemy</a></strong></p>
-					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-129e3880-ddaa-4421-ba45-62b91546769e/" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-129e3880-ddaa-4421-ba45-62b91546769e/" target="_blank" style="text-decoration: none;"> Certificazione</a></strong></p>
+					<br>
+					<h2>EIPASS IT Security</h2>
+					<p><strong><a href="https://en.eipass.com/" target="_blank" style="text-decoration: none;">EIPASS</a></strong></p>
+					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS IT Security - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certificazione</a></strong></p>
+					<br>
+					<h2>EIPASS 7 Moduli User</h2>
+					<p><strong><a href="https://en.eipass.com/" target="_blank" style="text-decoration: none;">EIPASS</a></strong></p>
+					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS 7 Moduli User - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certificazione</a></strong></p>
 					<br>
 					<h2>Adobe Premiere Pro</h2>
 					<p><strong><a href="https://www.udemy.com/" target="_blank" style="text-decoration: none;">Udemy</a></strong></p>
-					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-PVZPEVI1/" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-PVZPEVI1/" target="_blank" style="text-decoration: none;"> Certificazione</a></strong></p>
 					<br>
 					<h2>B2 First - Score 162</h2>
-					<p><strong><a href="https://www.cambridge.org/" target="_blank" style="text-decoration: none;">Cambridge University Press & Assessment</a></strong></p>
-					<p><strong>Mid 2017 - <Icon icon="certificate" size="1.33em" /><a href="/documents/B2 First - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong><a href="https://www.cambridge.org/" target="_blank" style="text-decoration: none;">Cambridge University</a></strong></p>
+					<p><strong>Mid 2017 - <Icon icon="certificate" size="1.33em" /><a href="/documents/B2 First - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certificazione</a></strong></p>
 					</div>
 			</section>
 			<section>
 				
 				<h2 class="section-title">{t("about.edu")}</h2>
 				<div class="content">
-					<p style="color:blueviolet; font-weight: bold;">{t("about.edu2")}<br>Cisco CCNA</p>
-					<br>
-					<h2>{t("about.edu3")}</h2>
 					<h2 style="color: var(--gray-300);">ITIS Luigi Trafelli</h2>
 					<h2 style="color: var(--gray-300);">2013 - 2018</h2>
 				</div>
