--- a/src/pages/it/index.astro
+++ b/src/pages/it/index.astro
@@ -34,6 +34,7 @@ const projects = (await getCollection("work_it"))
 				>
 					<div class="roles">
 						<Pill><Icon icon="windows" size="1.33em" /> Windows Lover</Pill>
+						<Pill><Icon icon="square-four" size="1.33em" /> O365 Administrator</Pill>
 						<Pill><Icon icon="desktop-tower" size="1.33em" /> Helpdesk</Pill>
 						<Pill><Icon icon="palette" size="1.33em" /> {t("site.artist")}</Pill>
 						<Pill><Icon icon="sketch-logo" size="1.33em" /> Logo Designer</Pill>
