--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,7 +30,7 @@ changeLanguage("en");
 				<div class="content">
 					<p>
 						<Trans i18nKey="about.text1">
-						I am an <strong>helpdesk operator</strong> with almost 3 years of experience in various IT fields. I possess knowledge in handling <strong>Azure, Active Directory, Operating Systems, and troubleshooting</strong> a wide range of software-related problems. Additionally, I have worked as a <strong>Control Room operator</strong>, leveraging my skills in monitoring softwares like Nagios.
+						I am an <strong>System Administrator</strong> with almost 3 years of experience in various IT fields. I possess knowledge in handling <strong>Azure, Active Directory, Operating Systems, and troubleshooting</strong> a wide range of software-related problems. Additionally, I have worked as a <strong>Control Room operator</strong>, leveraging my skills in monitoring softwares like Nagios.
 						</Trans>
 					</p>
 					<p>
@@ -49,29 +49,52 @@ changeLanguage("en");
 			<section>
 				<h2 class="section-title">{t("about.exp")}</h2>
 				<div class="content">
-					<h2>HelpDesk and Service Desk Technician - <a href="https://www.europassistance.it/" target="_blank">Europassistance</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
-					<h2 style="color:var(--gray-300);">Early 2023 | Full-time</h2>
-					<p><Icon icon="windows" size="1.33em" /> Windows Systems troubleshooting</p>
-					<p><Icon icon="user-folder" size="1.33em" /> Managing Active Directory</p>
-					<p><Icon icon="square-four" size="1.33em" /> O365 Global Administrator</p>
-					<p><Icon icon="identification-badge" size="1.33em" /> Identity Governance management (with company custom sotfware)</p>
-					<p><Icon icon="desktop-tower" size="1.33em" /> Remote and On-site IT support</p>
-					<p><Icon icon="hard-drives" size="1.33em" /> ESXi servers management</p>
+					<h2>System Administrator & End-user service - <a href="https://www.brembo.com/" target="_blank">Brembo</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
+					<h2 style="color:var(--gray-300);">Inizio 2024 | Full-time</h2>
+					<p><Icon icon="list-check" size="1.33em" /> Ticket management via the Service Now platform</p>
+                    <p><Icon icon="user-folder" size="1.33em" /> Active Directory and Domain Administrator: creating administrative and onboarding users, groups, OUs, network folder permissions management, Device Lock management, Group Policies and DHCP Server</p>
+                    <p><Icon icon="square-four" size="1.33em" /> Full management of all MS services: Azure, Intune, Teams Administrator, Exchange Online Administrator, Microsoft 365 Security, Microsoft Admin Portal</p>
+                    <p><Icon icon="code" size="1.33em" /> Automation and scripting with Powershell and Python</p>
+                    <p><Icon icon="phone-call" size="1.33em" /> Creation and management of critical tickets to Microsoft support in English</p>
+                    <p><Icon icon="network" size="1.33em" /> Basic knowledge of Networks and Networking</p>
+                    <p><Icon icon="hard-drives" size="1.33em" /> Basic knowledge of SCCM</p>
+                    <p><Icon icon="cloud" size="1.33em" /> Using Citrix for session management and app virtualization</p>
+                    <p><Icon icon="headset" size="1.33em" /> Admin side management for various enterprise applications and remote support applications (Bomgar)</p>
 					<br>
-					<h2>Control Room operator - <a href="https://www.luxottica.com/" target="_blank">Luxottica</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
+					<h2>HelpDesk - <a href="https://www.europassistance.it/" target="_blank">Europassistance</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
+					<h2 style="color:var(--gray-300);">Early 2023 | Full-time</h2>
+					<p><Icon icon="list-check" size="1.33em" /> Ticket management via the Mantis platform</p>
+                    <p><Icon icon="user-folder" size="1.33em" /> Active Directory, Windows Server 2016 - 2019</p>
+                    <p><Icon icon="windows" size="1.33em" /> Creating, managing and configuring Distribution Lists and Shared Mailboxes via Exchange Online and OnPremise</p>
+                    <p><Icon icon="teams" size="1.33em" /> Knowledge of Sharepoint platforms, MS Teams</p>
+                    <p><Icon icon="square-four" size="1.33em" /> Knowledge of Azure and MS Intune</p>
+                    <p><Icon icon="identification-badge" size="1.33em" /> Partial management of corporate Identity Governance</p>
+                    <p><Icon icon="desktop-tower" size="1.33em" />Headquarters support in preparing, installing and organizing meeting rooms for video conferencing</p>
+                    <p><Icon icon="phone-call" size="1.33em" /> Handling incoming and outgoing technical support calls and emails</p>
+					<br>
+					<h2>HelpDesk - <a href="https://www.centrostyle.com/" target="_blank">Centrostyle</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
+					<h2 style="color:var(--gray-300);">Inizio 2023</h2>
+					<p><Icon icon="list-check" size="1.33em" /> Ticket management via the Jira platform</p>
+                    <p><Icon icon="desktop-tower" size="1.33em" /> Assistance on on-site hardware installation</p>
+                    <p><Icon icon="printer" size="1.33em" /> Assistance on printer installation and enterprise software for end users</p>
+                    <p><Icon icon="computer-tower" size="1.33em" /> Installation of end-user workstations</p>
+                    <p><Icon icon="square-four" size="1.33em" /> Enterprise hardware preparation: OS installation, BIOS upgrade and more</p>
+					<br>
+					<h2>Control Room Operator - <a href="https://www.luxottica.com/" target="_blank">Luxottica</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
 					<h2 style="color:var(--gray-300);">Early 2021 | Full-time</h2>
-					<p><Icon icon="pulse" size="1.33em" /> Monitoring software usage (Nagios & Solarwinds)</p>
-					<p><Icon icon="linux-logo" size="1.33em" /> Linux servers management</p>
-					<p><Icon icon="windows" size="1.33em" /> Windows servers managment</p>
-					<p><Icon icon="globe-simple" size="1.33em" /> Monitoring company IT infrastructure (switches, routers, servers and so on)</p>
-					<p><Icon icon="square-four" size="1.33em" /> Optimize Azure costs and usage</p>
+					<p><Icon icon="pulse" size="1.33em" /> Management via Nagios and Solarwind monitoring platform</p>
+                    <p><Icon icon="code" size="1.33em" /> Creating scripts for Nagios and automation scripts with Python and Bash</p>
+                    <p><Icon icon="linux-logo" size="1.33em" /> Installing agents on Windows and Linux machines</p>
+                    <p><Icon icon="hard-drives" size="1.33em" /> Monitoring network equipment such as Switches, Routers, Firewalls and Virtual Machines</p>
+                    <p><Icon icon="phone-call" size="1.33em" /> Handling international English-language calls for critical issues</p>
+                    <p><Icon icon="square-four" size="1.33em" /> Extensive use of Office suite: Excel, Word, Outlook</p>
 					<br>
 					<h2>Recording Studio Technician - <a href="https://ilclandestinogiornale.italiasera.it/" target="_blank">DComunication</a></h2>
 					<h2 style="color:var(--gray-300);">Late 2019 | Fixed-term full-time</h2>
 					<p><Icon icon="video" size="1.33em" /> Video & Photo Editing</p>
 					<p><Icon icon="film-reel" size="1.33em" /> Directing for local television shows and broadcasts</p>
 					<p><Icon icon="video-camera" size="1.33em" /> Cameraman</p>
-					<p><Icon icon="code" size="1.33em" /> Internal website development (wordpress) ad grapich design</p>
+					<p><Icon icon="code" size="1.33em" /> Internal website development (wordpress) and grapich design</p>
 				</div>
 			</section>
 			<section>
@@ -81,6 +104,14 @@ changeLanguage("en");
 					<p><strong><a href="https://learn.microsoft.com/en-us/certifications/" target="_blank" style="text-decoration: none;">Microsoft</a></strong></p>
 					<p><strong>Summer 2022 - <Icon icon="certificate" size="1.33em" /><a href="https://www.credly.com/badges/1e4a40d9-096f-4382-b468-5fb8188e41b3/linked_in_profile" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
+					<h2>Active Directory & Windows Server 2019</h2>
+					<p><strong><a href="https://www.udemy.com/" target="_blank" style="text-decoration: none;">Udemy</a></strong></p>
+					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-b5498972-c63b-4226-aadb-3ebd5c990977/" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
+					<br>
+					<h2>CSS, JavaScript And Python Complete Course</h2>
+					<p><strong><a href="https://www.udemy.com/" target="_blank" style="text-decoration: none;">Udemy</a></strong></p>
+					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-129e3880-ddaa-4421-ba45-62b91546769e/" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
+					<br>
 					<h2>EIPASS IT Security</h2>
 					<p><strong><a href="https://en.eipass.com/" target="_blank" style="text-decoration: none;">EIPASS</a></strong></p>
 					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS IT Security - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
@@ -89,16 +120,12 @@ changeLanguage("en");
 					<p><strong><a href="https://en.eipass.com/" target="_blank" style="text-decoration: none;">EIPASS</a></strong></p>
 					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS 7 Moduli User - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
-					<h2>CSS, JavaScript And Python Complete Course</h2>
-					<p><strong><a href="https://www.udemy.com/" target="_blank" style="text-decoration: none;">Udemy</a></strong></p>
-					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-129e3880-ddaa-4421-ba45-62b91546769e/" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
-					<br>
 					<h2>Adobe Premiere Pro</h2>
 					<p><strong><a href="https://www.udemy.com/" target="_blank" style="text-decoration: none;">Udemy</a></strong></p>
 					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-PVZPEVI1/" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
 					<h2>B2 First - Score 162</h2>
-					<p><strong><a href="https://www.cambridge.org/" target="_blank" style="text-decoration: none;">Cambridge University Press & Assessment</a></strong></p>
+					<p><strong><a href="https://www.cambridge.org/" target="_blank" style="text-decoration: none;">Cambridge University</a></strong></p>
 					<p><strong>Mid 2017 - <Icon icon="certificate" size="1.33em" /><a href="/documents/B2 First - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					</div>
 			</section>
@@ -106,9 +133,6 @@ changeLanguage("en");
 				
 				<h2 class="section-title">{t("about.edu")}</h2>
 				<div class="content">
-					<p style="color:blueviolet; font-weight: bold;">{t("about.edu2")}<br>Cisco CCNA</p>
-					<br>
-					<h2>{t("about.edu3")}</h2>
 					<h2 style="color: var(--gray-300);">ITIS Luigi Trafelli</h2>
 					<h2 style="color: var(--gray-300);">2013 - 2018</h2>
 				</div>
