Added new better gallery

--- a/src/pages/it/about.astro
+++ b/src/pages/it/about.astro
@@ -35,7 +35,7 @@ changeLanguage("it");
 					</p>
 					<p>
 						<Trans i18nKey="about.text2">
-						<strong>Computer science</strong> have been an integral part of my life since childhood and a life long passion, as I began using PCs with Windows 98. I am deeply passionate about this field and constantly strive to <strong>expand my knowledge through continuous learning</strong>. One of my ambitions is to work as a <strong>system administrator</strong>, where I can utilize my expertise to tackle complex IT challenges and ensure optimal system performance.
+						<strong>Computer science</strong> have been an integral part of my life since childhood and a life long passion, as I began using PCs with Windows 98. I am deeply passionate about this field and constantly strive to <strong>expand my knowledge through continuous learning</strong>.
 						</Trans>
 					</p>
 					<p>
