--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -30,40 +30,47 @@ const projects = (await getCollection("work_en")).sort((a, b) => b.data.publishD
           <link rel="stylesheet" href="https://unpkg.com/img-comparison-slider@7/dist/styles.css" />
           <!-- End Comparison Load -->
 
+          <!-- Start Gallery -->
           <Hero title={t( "work.work1")} tagline={t( "work.work2")} align="start" />
-          <!-- 3DGrid -->
-          <div class="grid image-grid" style='margin-top:-4rem;'>
-              <div class="grid-block">
-                  <div class="tile">
-                      <a class="tile-link" href={localizePath( "/work/you")}>
-                          <img class="tile-img tile-img1" src="/assets/artworks/p1.webp" alt="You">
-                      </a>
-                  </div>
-              </div>
-              <div class="grid-block">
-                  
-                  <div class="tile">
-                      <a class="tile-link" href={localizePath( "/work/energy-and-light")}>
-                          <img class="tile-img tile-img1" src="/assets/artworks/p2.webp" alt="Energy and Light">
-                      </a>
-                  </div>
-              </div>
-              <div class="grid-block">             
-                  <div class="tile">
-                      <a class="tile-link" href={localizePath( "/work/quirks")}>
-                          <img class="tile-img tile-img1" src="/assets/artworks/s1.webp" alt="Quirks">
-                      </a>
-                  </div>
-              </div>
-              <div class="grid-block">             
-                  <div class="tile">
-                      <a class="tile-link" href={localizePath( "/work/wonder")}>
-                          <img class="tile-img tile-img1" src="/assets/artworks/s2.webp" alt="Wonder">
-                      </a>
-                  </div>
-              </div>
+          <div class="grid-container">
+            <div>
+              <a class="tile-link" href={localizePath( "/work/you")}>
+              <img class='grid-item grid-item-1' src='/assets/artworks/p1.webp' alt=''>
+              </a>
+              <p>You</p>
+            </div>
+            <div>
+              <a class="tile-link" href={localizePath( "/work/energy-and-light")}>
+              <img class='grid-item grid-item-2' src='/assets/artworks/p2.webp' alt=''>
+              </a>
+              <p>Energy and Light</p>
+            </div>
+            <div>
+              <a class="tile-link" href={localizePath( "/work/the-moon")}>
+              <img class='grid-item grid-item-3' src='/assets/artworks/p3.webp' alt=''>
+              </a>
+              <p>The Moon</p>
+            </div>
+            <div>
+              <a class="tile-link" href={localizePath( "/work/wonder")}>
+              <img class='grid-item grid-item-4' src='/assets/artworks/s2.webp' alt=''>
+              </a>
+              <p>Wonder</p>
+            </div>
+            <div>
+              <a class="tile-link" href={localizePath( "/work/quirks")}>
+              <img class='grid-item grid-item-5' src='/assets/artworks/s1.webp' alt=''>
+              </a>
+              <p>Quirks</p>
+            </div>
+            <div>
+              <a class="tile-link" href={localizePath( "/work/i-love-you")}>
+              <img class='grid-item grid-item-6' src='/assets/artworks/p4.webp' alt=''>
+              </a>
+              <p>I love You</p>
+            </div>
           </div>
-          <!-- End 3DGrid -->
+          <!-- End Gallery -->
 
           <!-- Logo -->
           <Hero title={t( "work.work3")} tagline={t( "work.work4")} align="start" />
@@ -151,95 +158,40 @@ h4{
   font-size: var(--text-lg);
 }
 
-html {
-  box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body {
-  margin: 0;
-  min-height: 100vh;
-  font-size: 1rem;
-  line-height: 1.25;
-  background-color: #18222d;
-}
-
-.grid {
+.grid-container {
+  columns: 3 200px;
+  column-gap: 1.5rem;
   width: 100%;
-  max-width: 60rem;
-  margin-left: auto;
-  margin-right: auto;
-
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.grid-block {
-  width: 50%;
-  min-height: 11.25rem;
-  padding: 1rem;
-}
-
-.image-grid {
-  -webkit-transform: rotateX(45deg) rotateZ(45deg);
-  transform: rotateX(45deg) rotateZ(45deg);
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-
-.image-grid .tile-link:hover .tile-img {
-  top: -1rem;
-  left: -1rem;
-}
-
-.image-grid .tile-img {
-  position: relative;
-  top: 0;
-  left: 0;
-  -webkit-transition-property: opacity, top, left, box-shadow;
-  transition-property: opacity, top, left, box-shadow;
-}
-
-.tile-link {
-  display: block;
-}
-
-.tile-link:hover .tile-img {
-  opacity: 1;
-}
-
-.tile-link:hover .tile-img-link {
-  display: block;
-}
-
-.tile-link:hover .tile-img-link:hover .tile-img {
-  opacity: 0.5;
-}
-
-.tile-img {
-  display: block;
-  width: 100%;
-  height: auto;
-  opacity: 1;
-  -webkit-transition-property: opacity;
-  transition-property: opacity;
-  -webkit-transition-duration: 0.125s;
-  transition-duration: 0.125s;
-  -webkit-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
-}
-.tile-link:hover .tile-img1 {
-  box-shadow: 5px 5px var(--3d-layer1),
-    10px 10px var(--3d-layer2), 15px 15px var(--3d-layer3),
-    20px 20px var(--3d-layer4), 25px 25px var(--3d-layer5);
+  margin: 0 auto;
+  div {
+    width: 150px;
+    margin: 0 1.5rem 1.5rem 0;
+    display: inline-block;
+    width: 100%;
+    border: solid 2px black;
+    padding: 5px;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+    border-radius: 5px;
+    transition: all .25s ease-in-out;
+    &:hover img {
+      filter: grayscale(0);
+    }
+    &:hover {
+      border-color: rgb(255, 80, 217);
+    }
+    img {
+      width: 100%;
+      filter: grayscale(100%);
+      border-radius: 5px;
+      transition: all .25s ease-in-out;
+    }
+    p {
+      margin: 5px 0;
+      padding: 0;
+      text-align: center;
+      font-style: italic;
+    }
+  }
 }
 
 </style>
