--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -50,7 +50,7 @@ changeLanguage("en");
 				<h2 class="section-title">{t("about.exp")}</h2>
 				<div class="content">
 					<h2>System Administrator & End-user service - <a href="https://www.brembo.com/" target="_blank">Brembo</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
-					<h2 style="color:var(--gray-300);">Inizio 2024 | Full-time</h2>
+					<h2 style="color:var(--gray-300);">Early 2024 | Full-time</h2>
 					<p><Icon icon="list-check" size="1.33em" /> Ticket management via the Service Now platform</p>
                     <p><Icon icon="user-folder" size="1.33em" /> Active Directory and Domain Administrator: creating administrative and onboarding users, groups, OUs, network folder permissions management, Device Lock management, Group Policies and DHCP Server</p>
                     <p><Icon icon="square-four" size="1.33em" /> Full management of all MS services: Azure, Intune, Teams Administrator, Exchange Online Administrator, Microsoft 365 Security, Microsoft Admin Portal</p>
@@ -73,7 +73,7 @@ changeLanguage("en");
                     <p><Icon icon="phone-call" size="1.33em" /> Handling incoming and outgoing technical support calls and emails</p>
 					<br>
 					<h2>HelpDesk - <a href="https://www.centrostyle.com/" target="_blank">Centrostyle</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
-					<h2 style="color:var(--gray-300);">Inizio 2023</h2>
+					<h2 style="color:var(--gray-300);">Mid 2023</h2>
 					<p><Icon icon="list-check" size="1.33em" /> Ticket management via the Jira platform</p>
                     <p><Icon icon="desktop-tower" size="1.33em" /> Assistance on on-site hardware installation</p>
                     <p><Icon icon="printer" size="1.33em" /> Assistance on printer installation and enterprise software for end users</p>
