--- a/src/pages/it/about.astro
+++ b/src/pages/it/about.astro
@@ -73,7 +73,7 @@ changeLanguage("it");
 					<p><Icon icon="phone-call" size="1.33em" /> Gestione telefonate di assistenza tecnica e e-mail in entrata e uscita</p>
 					<br>
 					<h2>HelpDesk - <a href="https://www.centrostyle.com/" target="_blank">Centrostyle</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
-					<h2 style="color:var(--gray-300);">Inizio 2023</h2>
+					<h2 style="color:var(--gray-300);">Metà 2023</h2>
 					<p><Icon icon="list-check" size="1.33em" /> Gestione di ticket tramite la piattaforma Jira</p>
 					<p><Icon icon="desktop-tower" size="1.33em" /> Assistenza su installazione hardware in sede</p>
 					<p><Icon icon="printer" size="1.33em" /> Assistenza su installazione stampanti e software aziendali per gli utenti finali</p>
