--- a/src/components/CvCTA.astro
+++ b/src/components/CvCTA.astro
@@ -6,7 +6,7 @@ import Icon from './Icon.astro';
 
 <aside>
 	<h2>{t("mail.cvquestion")}</h2>
-	<CvCallToAction href="https://drive.google.com/file/d/1sTzxzaZjAmvc-ijddmPdsCaiKtSSVEvc/view?usp=sharing">
+	<CvCallToAction href="">
 		{t("mail.cv")}
 		<Icon icon="file-pdf" size="1.2em" />
 	</CvCallToAction>
